--- a/exercises/01_chatbot.ipynb
+++ b/exercises/01_chatbot.ipynb
@@ -2,31 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8d121308",
-   "metadata": {},
+   "id": "9292ce71",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "# Building a Chatbot\n",
     "\n",
-    "First, we'll need to install a couple packages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "521da042",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install databricks-langchain langchain-core\n",
-    "%restart_python"
+    "First, we'll need to install a couple packages.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16f08415",
+   "id": "a384465a",
    "metadata": {},
    "source": [
-    "Today we'll be working with GPT-4.1, deployed on Azure AI Foundry.\n",
+    "Today we'll be working with Databricks LLMs.\n",
     "Below we see an example for how to instantiate the model and for how\n",
     "to invoke it."
    ]
@@ -34,14 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f94b1b",
+   "id": "8f0595b1",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "from databricks_langchain import ChatDatabricks\n",
-    "from langchain_core.messages import AIMessage, HumanMessage\n",
+    "from langchain.messages import AIMessage, HumanMessage\n",
     "\n",
     "model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
     "\n",
@@ -51,26 +42,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d326dda",
+   "id": "b6a3877a",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "source": [
-    "\n",
     "Now it's your turn. Solve the exercises below.\n",
     "\n",
-    "To test your chatbot, run this on the terminal:\n",
-    "\n",
-    "      uv run 01_chatbot.py\n"
+    "To test your chatbot, run this on the terminal:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a07805eb",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "81c9991a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Exercise 1.1:\n",
@@ -102,27 +88,75 @@
     "        print(f\"AI: {response.content}\")\n",
     "\n",
     "        # Add AI message\n",
-    "        chat_history.append(response)\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    chat_shell()"
+    "        chat_history.append(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff25fab",
-   "metadata": {},
+   "id": "0d21c6ad",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# Run the chatbot\n",
+    "chat_shell()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3971e4dd",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Exercise 1.2 (Bonus):\n",
     "#\n",
     "# Use streamlit to build a simple chat interface.\n",
     "#\n",
-    "#\n",
+    "# To test it, deploy the app.py to databricks apps using the UI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a7c443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%writefile app.py\n",
     "# <solution>\n",
-    "# TODO: your code here\n",
+    "import os\n",
+    "import streamlit as st\n",
+    "from databricks_langchain import ChatDatabricks\n",
+    "from langchain.messages import AIMessage, HumanMessage\n",
+    "\n",
+    "st.title(\"Chatbot\")\n",
+    "\n",
+    "if \"messages\" not in st.session_state:\n",
+    "    st.session_state.messages = []\n",
+    "\n",
+    "for message in st.session_state.messages:\n",
+    "    if isinstance(message, HumanMessage):\n",
+    "        with st.chat_message(\"user\"):\n",
+    "            st.markdown(message.content)\n",
+    "    elif isinstance(message, AIMessage):\n",
+    "        with st.chat_message(\"assistant\"):\n",
+    "            st.markdown(message.content)\n",
+    "\n",
+    "if prompt := st.chat_input(\"What is up?\"):\n",
+    "    st.session_state.messages.append(HumanMessage(content=prompt))\n",
+    "    with st.chat_message(\"user\"):\n",
+    "        st.markdown(prompt)\n",
+    "\n",
+    "    with st.chat_message(\"assistant\"):\n",
+    "        model = ChatDatabricks(endpoint=\"databricks-claude-sonnet-4-5\")\n",
+    "        response = model.invoke(st.session_state.messages)\n",
+    "        st.markdown(response.content)\n",
+    "        st.session_state.messages.append(response)\n",
     "# </solution>"
    ]
   }
