--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d2e58be",
+   "id": "184a7708",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,17 +24,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5039a353",
+   "id": "31ca1ca7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain langgraph duckduckgo-search databricks-langchain pydantic\n",
+    "%pip install langchain langgraph duckduckgo-search databricks-langchain pydantic typing_extensions\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f45db788",
+   "id": "2a6f179a",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,12 +44,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef421f84",
+   "id": "64eea21b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import operator\n",
-    "from typing import Annotated, List, NotRequired, TypedDict\n",
+    "from typing import Annotated, List, TypedDict\n",
+    "\n",
+    "try:\n",
+    "    from typing import NotRequired\n",
+    "except ImportError:\n",
+    "    from typing_extensions import NotRequired\n",
     "\n",
     "from langchain_community.tools import DuckDuckGoSearchRun\n",
     "from langgraph.graph import END, START, StateGraph\n",
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e642d64d",
+   "id": "5d54147b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -87,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb97d33",
+   "id": "bd6809dc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038bf16d",
+   "id": "00a71e26",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -142,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032065c9",
+   "id": "d61242aa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9790b612",
+   "id": "95a3bdf3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -229,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f150836d",
+   "id": "f1f7d0bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bbcc06e",
+   "id": "43313db5",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -273,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650f58b8",
+   "id": "95978a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d961935",
+   "id": "21f82f0f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -303,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a88666b",
+   "id": "7755e320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "365eff68",
+   "id": "566007dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92f524d",
+   "id": "da1c87c5",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -389,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619ecc6c",
+   "id": "71ca20ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,17 +429,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bdce18c",
-   "metadata": {},
+   "id": "5d8d43c6",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "### Run Interactive Session\n",
     "\n",
     "We need to handle the execution flow:\n",
     "1. Run until interrupt.\n",
     "2. Inspect payload.\n",
-    "3. Resume with feedback.\n",
-    "\n",
-    "\n",
+    "3. Resume with feedback."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05167293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def run_research_interactive():\n",
     "    \"\"\"\n",
     "    Runs the research agent in an interactive loop.\n",
@@ -508,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12102c1a",
+   "id": "eb0be658",
    "metadata": {},
    "outputs": [],
    "source": [
