--- a/labs/lab_01_eval_gaia.ipynb
+++ b/labs/lab_01_eval_gaia.ipynb
@@ -1,96 +1,80 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "305a9836",
+   "metadata": {},
+   "source": [
+    "# GAIA Evaluation\n",
+    "\n",
+    "This notebook evaluates the Deep Research Agent against the GAIA benchmark.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2077cdb",
+   "id": "8a63b0d6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install langchain langgraph duckduckgo-search databricks-langchain pydantic pandas polars datasets huggingface_hub typing_extensions\n",
+    "%restart_python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f43fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
     "import re\n",
     "import pandas as pd\n",
     "from datasets import load_dataset\n",
-    "from huggingface_hub import snapshot_download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ec93bdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from huggingface_hub import snapshot_download\n",
+    "\n",
     "# Import the configured model (Judge) and the Agent Application (Solver)\n",
+    "# Ensure src is in python path if running from root\n",
+    "import sys\n",
+    "if \"src\" not in sys.path:\n",
+    "    sys.path.append(\"src\")\n",
+    "\n",
     "from llm import model as judge_llm\n",
-    "from lab_01_deep_research import app"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac797eb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from lab_01_deep_research import app\n",
+    "\n",
     "# 1. Load GAIA Validation Set\n",
     "print(\"Loading GAIA dataset...\")\n",
-    "data_dir = snapshot_download(repo_id=\"gaia-benchmark/GAIA\", repo_type=\"dataset\")\n",
-    "dataset = load_dataset(data_dir, \"2023_level1\", split=\"validation\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c0f0afb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert to Pandas\n",
-    "df = dataset.to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "718e0792",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "CSV_FILE = \"gaia_validation_level1.csv\"\n",
+    "\n",
+    "if os.path.exists(CSV_FILE):\n",
+    "    print(f\"Loading dataset from {CSV_FILE}...\")\n",
+    "    df = pd.read_csv(CSV_FILE)\n",
+    "else:\n",
+    "    print(\"Downloading dataset from HuggingFace...\")\n",
+    "    data_dir = snapshot_download(repo_id=\"gaia-benchmark/GAIA\", repo_type=\"dataset\")\n",
+    "    dataset = load_dataset(data_dir, \"2023_level1\", split=\"validation\")\n",
+    "    \n",
+    "    # Convert to Pandas\n",
+    "    df = dataset.to_pandas()\n",
+    "    \n",
+    "    # Save to CSV for next time\n",
+    "    print(f\"Saving dataset to {CSV_FILE}...\")\n",
+    "    df.to_csv(CSV_FILE, index=False)\n",
+    "\n",
+    "\n",
     "# Filter dataset (exclude multimedia tools and file uploads for this text-only agent)\n",
     "# Conditions:\n",
     "# A. Annotator Metadata does NOT contain video/image/youtube\n",
     "# B. file_name is empty or null\n",
     "mask_no_multimedia = ~df[\"Annotator Metadata\"].astype(str).str.lower().str.contains(\"video|image|youtube\", regex=True)\n",
-    "mask_no_file = df[\"file_name\"].isnull() | (df[\"file_name\"] == \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cac714fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_df = df[mask_no_multimedia & mask_no_file].head(5).copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d78ef8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Loaded {len(filtered_df)} tasks for evaluation.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46d7ca6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mask_no_file = df[\"file_name\"].isnull() | (df[\"file_name\"] == \"\")\n",
+    "\n",
+    "filtered_df = df[mask_no_multimedia & mask_no_file].head(5).copy()\n",
+    "\n",
+    "print(f\"Loaded {len(filtered_df)} tasks for evaluation.\")\n",
+    "\n",
+    "\n",
     "# 2. Define Solver Wrapper\n",
     "def query_solver_model(question):\n",
     "    \"\"\"\n",
@@ -102,16 +86,9 @@
     "        result = app.invoke({\"topic\": question})\n",
     "        return result.get(\"final_report\", \"No report generated.\")\n",
     "    except Exception as e:\n",
-    "        return f\"Error during research: {str(e)}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0774b8b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return f\"Error during research: {str(e)}\"\n",
+    "\n",
+    "\n",
     "# 3. Define Judge Wrapper\n",
     "def query_judge_model(question, predicted, truth, metadata):\n",
     "    \"\"\"\n",
@@ -133,50 +110,20 @@
     "    SCORE: [Score]\n",
     "    REASON: [Short explanation]\n",
     "    \"\"\"\n",
-    "    return judge_llm.invoke(prompt).content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49cc5ca6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return judge_llm.invoke(prompt).content\n",
+    "\n",
+    "\n",
     "def extract_score(judge_response):\n",
     "    match = re.search(r\"SCORE:\\s*(\\d+)\", judge_response)\n",
-    "    return int(match.group(1)) if match else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54e189b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return int(match.group(1)) if match else None\n",
+    "\n",
+    "\n",
     "# 4. Run Evaluation Loop\n",
     "# Import the ReAct agent\n",
-    "from lab_01_react import run_react_agent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ecee458e",
-   "metadata": {},
-   "source": [
-    "... (Previous imports remain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1898e345",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
+    "from lab_01_react import run_react_agent\n",
+    "\n",
+    "# ... (Previous imports remain)\n",
+    "\n",
     "# 4. Run Evaluation Loop\n",
     "results = []\n",
     "for index, row in filtered_df.iterrows():\n",
@@ -214,29 +161,16 @@
     "            \"react_pred\": predicted_react,\n",
     "            \"react_score\": score_react\n",
     "        }\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7166da9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    )\n",
+    "\n",
+    "\n",
     "# 5. Summary\n",
     "results_df = pd.DataFrame(results)\n",
     "print(\"\\n=== Evaluation Results ===\")\n",
-    "print(results_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5446fde",
-   "metadata": {},
-   "source": [
-    "Optional: Save to CSV\n",
-    "results_df.to_csv(\"gaia_eval_results_pandas.csv\", index=False)"
+    "print(results_df)\n",
+    "\n",
+    "# Optional: Save to CSV\n",
+    "# results_df.to_csv(\"gaia_eval_results_pandas.csv\", index=False)"
    ]
   }
  ],
