--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0896f605",
+   "id": "b889c9e3",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc816e7",
+   "id": "dea7ba97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef46763c",
+   "id": "24c24968",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,10 +44,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218ab493",
+   "id": "e90d590e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.core.magic import register_cell_magic\n",
+    "\n",
+    "@register_cell_magic\n",
+    "def write_and_run(line, cell):\n",
+    "    \"\"\"\n",
+    "    Magic to write cell content to a file and then execute it.\n",
+    "    Usage: %%write_and_run filename.py\n",
+    "    \"\"\"\n",
+    "    argz = line.split()\n",
+    "    file = argz[0]\n",
+    "    mode = \"w\"\n",
+    "    if len(argz) == 2 and argz[1] == \"-a\":\n",
+    "        mode = \"a\"\n",
+    "        \n",
+    "    with open(file, mode) as f:\n",
+    "        f.write(cell + \"\\n\")\n",
+    "        \n",
+    "    get_ipython().run_cell(cell)\n",
+    "\n",
+    "# Initialize/Clear the app file\n",
+    "with open(\"deep_research_app.py\", \"w\") as f:\n",
+    "    f.write(\"# Generated Deep Research App\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ddf66f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "import operator\n",
     "from typing import Annotated, List, TypedDict\n",
     "\n",
@@ -70,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47391cdc",
+   "id": "a8d2ea84",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -92,12 +124,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c47347",
+   "id": "ad5a34e2",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "# Exercise 1: Define the State classes\n",
     "# <solution>\n",
     "class SubTaskState(TypedDict):\n",
@@ -130,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb848896",
+   "id": "46043037",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -147,12 +180,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeda99c5",
+   "id": "99bb5c1f",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "def chief_editor_node(state: ResearchState):\n",
     "    print(f\"--- [Chief Editor] Planning: {state['topic']} ---\")\n",
     "\n",
@@ -216,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d60a63a",
+   "id": "08436fc7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -234,10 +268,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9030ce7",
+   "id": "76484599",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "def map_subtopics(state: ResearchState):\n",
     "    # Exercise 3.1: Define the mapping logic\n",
     "    # Return a list of `Send` objects, one for each sub-topic.\n",
@@ -269,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38dce73",
+   "id": "1c35fca3",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -278,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773e7a7f",
+   "id": "19352dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa9da777",
+   "id": "a8ae647c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -308,10 +343,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c48cc13",
+   "id": "1784aaff",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "# Define new state for HITL\n",
     "class ResearchStateHITL(ResearchState):\n",
     "    critique: NotRequired[str]\n",
@@ -321,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "925f23e7",
+   "id": "413e3570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e226c7",
+   "id": "1d56c217",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -394,10 +430,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbfed510",
+   "id": "6f0cd637",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%write_and_run -a deep_research_app.py\n",
     "from langgraph.checkpoint.memory import InMemorySaver\n",
     "\n",
     "# Re-define graph\n",
@@ -429,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1772d9",
+   "id": "2c2eeda9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -445,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a961f4c1",
+   "id": "5322ad16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628c4bb8",
+   "id": "17b9e1bf",
    "metadata": {},
    "outputs": [],
    "source": [
