--- a/labs/lab_01_eval_gaia.ipynb
+++ b/labs/lab_01_eval_gaia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "305a9836",
+   "id": "71529c16",
    "metadata": {},
    "source": [
     "# GAIA Evaluation\n",
@@ -13,35 +13,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a63b0d6",
+   "id": "2f9aeb92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain langgraph duckduckgo-search databricks-langchain pydantic pandas polars datasets huggingface_hub typing_extensions\n",
+    "%pip install langchain langgraph ddgs databricks-langchain pydantic pandas datasets huggingface_hub typing_extensions\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f43fd0",
+   "id": "7959106e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
-    "import pandas as pd\n",
-    "from datasets import load_dataset\n",
-    "from huggingface_hub import snapshot_download\n",
     "\n",
-    "# Import the configured model (Judge) and the Agent Application (Solver)\n",
-    "# Ensure src is in python path if running from root\n",
-    "import sys\n",
-    "if \"src\" not in sys.path:\n",
-    "    sys.path.append(\"src\")\n",
+    "# %run lab_01_react.ipynb\n",
+    "\n",
+    "\n",
     "\n",
     "from llm import model as judge_llm\n",
-    "from lab_01_deep_research import app\n",
+    "\n",
+    "try:\n",
+    "    if \"app\" not in globals():\n",
+    "        from deep_research_app import app\n",
+    "except ImportError:\n",
+    "    pass\n",
+    "\n",
+    "try:\n",
+    "    if \"run_react_agent\" not in globals():\n",
+    "        from lab_01_react import run_react_agent\n",
+    "except ImportError:\n",
+    "    pass\n",
     "\n",
     "# 1. Load GAIA Validation Set\n",
     "print(\"Loading GAIA dataset...\")\n",
@@ -54,10 +60,10 @@
     "    print(\"Downloading dataset from HuggingFace...\")\n",
     "    data_dir = snapshot_download(repo_id=\"gaia-benchmark/GAIA\", repo_type=\"dataset\")\n",
     "    dataset = load_dataset(data_dir, \"2023_level1\", split=\"validation\")\n",
-    "    \n",
+    "\n",
     "    # Convert to Pandas\n",
     "    df = dataset.to_pandas()\n",
-    "    \n",
+    "\n",
     "    # Save to CSV for next time\n",
     "    print(f\"Saving dataset to {CSV_FILE}...\")\n",
     "    df.to_csv(CSV_FILE, index=False)\n",
@@ -67,7 +73,9 @@
     "# Conditions:\n",
     "# A. Annotator Metadata does NOT contain video/image/youtube\n",
     "# B. file_name is empty or null\n",
-    "mask_no_multimedia = ~df[\"Annotator Metadata\"].astype(str).str.lower().str.contains(\"video|image|youtube\", regex=True)\n",
+    "mask_no_multimedia = ~df[\"Annotator Metadata\"].astype(str).str.lower().str.contains(\n",
+    "    \"video|image|youtube\", regex=True\n",
+    ")\n",
     "mask_no_file = df[\"file_name\"].isnull() | (df[\"file_name\"] == \"\")\n",
     "\n",
     "filtered_df = df[mask_no_multimedia & mask_no_file].head(5).copy()\n",
@@ -119,12 +127,6 @@
     "\n",
     "\n",
     "# 4. Run Evaluation Loop\n",
-    "# Import the ReAct agent\n",
-    "from lab_01_react import run_react_agent\n",
-    "\n",
-    "# ... (Previous imports remain)\n",
-    "\n",
-    "# 4. Run Evaluation Loop\n",
     "results = []\n",
     "for index, row in filtered_df.iterrows():\n",
     "    task_id = row[\"task_id\"]\n",
@@ -137,13 +139,13 @@
     "    # --- Agent 1: Deep Research ---\n",
     "    predicted_dr = query_solver_model(question)\n",
     "    print(f\"[Deep Research Output]: {predicted_dr[:100]}...\")\n",
-    "    \n",
+    "\n",
     "    judge_resp_dr = query_judge_model(question, predicted_dr, truth, metadata)\n",
     "    score_dr = extract_score(judge_resp_dr)\n",
     "    print(f\"Deep Research Score: {score_dr}\")\n",
     "\n",
     "    # --- Agent 2: ReAct Baseline ---\n",
-    "    print(f\"[ReAct] Researching...\")\n",
+    "    print(\"[ReAct] Researching...\")\n",
     "    predicted_react = run_react_agent(question)\n",
     "    print(f\"[ReAct Output]: {predicted_react[:100]}...\")\n",
     "\n",
@@ -159,7 +161,7 @@
     "            \"deep_research_pred\": predicted_dr,\n",
     "            \"deep_research_score\": score_dr,\n",
     "            \"react_pred\": predicted_react,\n",
-    "            \"react_score\": score_react\n",
+    "            \"react_score\": score_react,\n",
     "        }\n",
     "    )\n",
     "\n",
