--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b889c9e3",
+   "id": "332d20e2",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea7ba97",
+   "id": "069d094e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24c24968",
+   "id": "2800303f",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,29 +44,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90d590e",
+   "id": "eda0a64b",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d408c2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.core.magic import register_cell_magic\n",
-    "\n",
-    "@register_cell_magic\n",
-    "def write_and_run(line, cell):\n",
-    "    \"\"\"\n",
-    "    Magic to write cell content to a file and then execute it.\n",
-    "    Usage: %%write_and_run filename.py\n",
-    "    \"\"\"\n",
-    "    argz = line.split()\n",
-    "    file = argz[0]\n",
-    "    mode = \"w\"\n",
-    "    if len(argz) == 2 and argz[1] == \"-a\":\n",
-    "        mode = \"a\"\n",
-    "        \n",
-    "    with open(file, mode) as f:\n",
-    "        f.write(cell + \"\\n\")\n",
-    "        \n",
-    "    get_ipython().run_cell(cell)\n",
-    "\n",
     "# Initialize/Clear the app file\n",
     "with open(\"deep_research_app.py\", \"w\") as f:\n",
     "    f.write(\"# Generated Deep Research App\\n\")"
@@ -75,11 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddf66f2",
+   "id": "33235728",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "import operator\n",
     "from typing import Annotated, List, TypedDict\n",
     "\n",
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d2ea84",
+   "id": "21c3b119",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -124,13 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5a34e2",
+   "id": "cea11e81",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "# Exercise 1: Define the State classes\n",
     "# <solution>\n",
     "class SubTaskState(TypedDict):\n",
@@ -163,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46043037",
+   "id": "0fc285ff",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -180,13 +171,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99bb5c1f",
+   "id": "b21797f8",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "def chief_editor_node(state: ResearchState):\n",
     "    print(f\"--- [Chief Editor] Planning: {state['topic']} ---\")\n",
     "\n",
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08436fc7",
+   "id": "c163dfea",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -268,11 +259,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76484599",
+   "id": "5a86476a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "def map_subtopics(state: ResearchState):\n",
     "    # Exercise 3.1: Define the mapping logic\n",
     "    # Return a list of `Send` objects, one for each sub-topic.\n",
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c35fca3",
+   "id": "d7986dd7",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -313,17 +304,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19352dea",
+   "id": "be2cf595",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from deep_research_app import app\n",
     "res = app.invoke({\"topic\": \"The future of Agentic AI\"})\n",
     "print(res[\"final_report\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a8ae647c",
+   "id": "a9eaac4e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -343,11 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1784aaff",
+   "id": "afe2749a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "# Define new state for HITL\n",
     "class ResearchStateHITL(ResearchState):\n",
     "    critique: NotRequired[str]\n",
@@ -357,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413e3570",
+   "id": "b2de58ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d56c217",
+   "id": "3d6d1c57",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -430,11 +422,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0cd637",
+   "id": "c99411c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%write_and_run -a deep_research_app.py\n",
+    "%%writefile -a deep_research_app.py\n",
     "from langgraph.checkpoint.memory import InMemorySaver\n",
     "\n",
     "# Re-define graph\n",
@@ -466,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2eeda9",
+   "id": "9356ff36",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -482,10 +474,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5322ad16",
+   "id": "9ba3ea91",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from deep_research_app import app_hitl\n",
+    "\n",
     "def run_research_interactive():\n",
     "    \"\"\"\n",
     "    Runs the research agent in an interactive loop.\n",
@@ -559,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b9e1bf",
+   "id": "d41cbf51",
    "metadata": {},
    "outputs": [],
    "source": [
