--- a/labs/lab_01_eval_gaia.ipynb
+++ b/labs/lab_01_eval_gaia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d89efc62",
+   "id": "264b4d61",
    "metadata": {},
    "source": [
     "# GAIA Evaluation\n",
@@ -13,88 +13,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f453a94",
+   "id": "5a808627",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install langchain langgraph ddgs databricks-langchain pydantic pandas datasets huggingface_hub typing_extensions\n",
+    "%pip install langchain langgraph ddgs databricks-langchain pydantic pandas typing_extensions\n",
     "%restart_python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7436164",
+   "id": "83ab5e5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import re\n",
     "\n",
-    "# %run lab_01_react.ipynb\n",
-    "\n",
-    "\n",
+    "import pandas as pd\n",
+    "from deep_research_app import app as research_agent\n",
+    "from langchain.agents import create_agent\n",
+    "from langchain_community.tools import DuckDuckGoSearchRun\n",
     "\n",
     "from llm import model as judge_llm\n",
+    "from llm import model as llm\n",
     "\n",
-    "try:\n",
-    "    if \"app\" not in globals():\n",
-    "        from deep_research_app import app\n",
-    "except ImportError:\n",
-    "    pass\n",
-    "\n",
-    "try:\n",
-    "    if \"run_react_agent\" not in globals():\n",
-    "        from lab_01_react import run_react_agent\n",
-    "except ImportError:\n",
-    "    pass\n",
-    "\n",
-    "# 1. Load GAIA Validation Set\n",
-    "print(\"Loading GAIA dataset...\")\n",
-    "CSV_FILE = \"gaia_validation_level1.csv\"\n",
-    "\n",
-    "if os.path.exists(CSV_FILE):\n",
-    "    print(f\"Loading dataset from {CSV_FILE}...\")\n",
-    "    df = pd.read_csv(CSV_FILE)\n",
-    "else:\n",
-    "    print(\"Downloading dataset from HuggingFace...\")\n",
-    "    data_dir = snapshot_download(repo_id=\"gaia-benchmark/GAIA\", repo_type=\"dataset\")\n",
-    "    dataset = load_dataset(data_dir, \"2023_level1\", split=\"validation\")\n",
-    "\n",
-    "    # Convert to Pandas\n",
-    "    df = dataset.to_pandas()\n",
-    "\n",
-    "    # Save to CSV for next time\n",
-    "    print(f\"Saving dataset to {CSV_FILE}...\")\n",
-    "    df.to_csv(CSV_FILE, index=False)\n",
-    "\n",
-    "\n",
-    "# Filter dataset (exclude multimedia tools and file uploads for this text-only agent)\n",
-    "# Conditions:\n",
-    "# A. Annotator Metadata does NOT contain video/image/youtube\n",
-    "# B. file_name is empty or null\n",
-    "mask_no_multimedia = ~df[\"Annotator Metadata\"].astype(str).str.lower().str.contains(\n",
-    "    \"video|image|youtube\", regex=True\n",
-    ")\n",
-    "mask_no_file = df[\"file_name\"].isnull() | (df[\"file_name\"] == \"\")\n",
-    "\n",
-    "filtered_df = df[mask_no_multimedia & mask_no_file].head(5).copy()\n",
+    "react_agent = create_agent(llm, [DuckDuckGoSearchRun()])\n",
+    "filtered_df = pd.read_csv(\"gaia_validation_level1.csv\")[:5]\n",
     "\n",
     "print(f\"Loaded {len(filtered_df)} tasks for evaluation.\")\n",
-    "\n",
-    "\n",
-    "# 2. Define Solver Wrapper\n",
-    "def query_solver_model(question):\n",
-    "    \"\"\"\n",
-    "    Invokes the Deep Research Agent.\n",
-    "    \"\"\"\n",
-    "    print(f\"\\n[Solver] Researching: {question[:50]}...\")\n",
-    "    try:\n",
-    "        # invoke the graph with the question\n",
-    "        result = app.invoke({\"topic\": question})\n",
-    "        return result.get(\"final_report\", \"No report generated.\")\n",
-    "    except Exception as e:\n",
-    "        return f\"Error during research: {str(e)}\"\n",
     "\n",
     "\n",
     "# 3. Define Judge Wrapper\n",
@@ -137,7 +84,8 @@
     "    print(f\"\\nProcessing Task: {task_id}\")\n",
     "\n",
     "    # --- Agent 1: Deep Research ---\n",
-    "    predicted_dr = query_solver_model(question)\n",
+    "    result = research_agent.invoke({\"topic\": question})\n",
+    "    predicted_dr = result.get(\"final_report\")\n",
     "    print(f\"[Deep Research Output]: {predicted_dr[:100]}...\")\n",
     "\n",
     "    judge_resp_dr = query_judge_model(question, predicted_dr, truth, metadata)\n",
@@ -146,7 +94,8 @@
     "\n",
     "    # --- Agent 2: ReAct Baseline ---\n",
     "    print(\"[ReAct] Researching...\")\n",
-    "    predicted_react = run_react_agent(question)\n",
+    "    result = react_agent.invoke({\"messages\": [question]})\n",
+    "    predicted_react = result[\"messages\"][-1].content\n",
     "    print(f\"[ReAct Output]: {predicted_react[:100]}...\")\n",
     "\n",
     "    judge_resp_react = query_judge_model(question, predicted_react, truth, metadata)\n",
