--- a/labs/lab_01_deep_research.ipynb
+++ b/labs/lab_01_deep_research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41e6ee63",
+   "id": "e5b9c990",
    "metadata": {},
    "source": [
     "# Lab 1: Deep Research Agent with Multi-Agent System\n",
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b11f64",
+   "id": "dbd8d9df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91128035",
+   "id": "aa1e048c",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac890e7b",
+   "id": "2df167ac",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,23 +54,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "750aec36",
+   "id": "1c9b29c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize/Clear the app file\n",
-    "with open(\"deep_research_app.py\", \"w\") as f:\n",
-    "    f.write(\"# Generated Deep Research App\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12aaf211",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%writefile -a deep_research_app.py\n",
     "import operator\n",
     "from typing import Annotated, List, TypedDict\n",
     "\n",
@@ -93,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f3617d3",
+   "id": "49eab0f4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -115,13 +102,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81de0d1a",
+   "id": "f0e990f6",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "%%writefile -a deep_research_app.py\n",
     "# Exercise 1: Define the State classes\n",
     "# <solution>\n",
     "class SubTaskState(TypedDict):\n",
@@ -154,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "698e1b10",
+   "id": "f6120fb1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -171,13 +157,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09462559",
+   "id": "c7c7acd0",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "%%writefile -a deep_research_app.py\n",
     "def chief_editor_node(state: ResearchState):\n",
     "    print(f\"--- [Chief Editor] Planning: {state['topic']} ---\")\n",
     "\n",
@@ -241,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088b44ab",
+   "id": "e244e4c3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -259,11 +244,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c669b853",
+   "id": "197c29db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile -a deep_research_app.py\n",
     "def map_subtopics(state: ResearchState):\n",
     "    # Exercise 3.1: Define the mapping logic\n",
     "    # Return a list of `Send` objects, one for each sub-topic.\n",
@@ -295,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c4523f3",
+   "id": "38e4b64d",
    "metadata": {},
    "source": [
     "### Run the Graph (Basic)"
@@ -304,18 +288,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f275c6",
+   "id": "d1c86cb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_research_app import app\n",
     "res = app.invoke({\"topic\": \"The future of Agentic AI\"})\n",
     "print(res[\"final_report\"])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a17ffca8",
+   "id": "9b72af2b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -335,24 +318,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb5da349",
+   "id": "b69c1d07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile -a deep_research_app.py\n",
     "# Define new state for HITL\n",
     "class ResearchStateHITL(ResearchState):\n",
     "    critique: NotRequired[str]\n",
-    "    approved: NotRequired[bool]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a2736fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    approved: NotRequired[bool]\n",
+    "\n",
+    "\n",
     "def planner_node(state: ResearchStateHITL):\n",
     "    print(f\"--- [Planner] Planning: {state['topic']} ---\")\n",
     "\n",
@@ -411,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8220fd8e",
+   "id": "895f3acd",
    "metadata": {},
    "source": [
     "### Re-build the Graph with HITL\n",
@@ -422,11 +397,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b8172df",
+   "id": "5443435c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile -a deep_research_app.py\n",
     "from langgraph.checkpoint.memory import InMemorySaver\n",
     "\n",
     "# Re-define graph\n",
@@ -458,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b607b0e",
+   "id": "4ab710b8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -474,12 +448,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f65ace6",
+   "id": "a47df73b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_research_app import app_hitl\n",
-    "\n",
     "def run_research_interactive():\n",
     "    \"\"\"\n",
     "    Runs the research agent in an interactive loop.\n",
@@ -553,13 +525,138 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "048bf817",
-   "metadata": {},
+   "id": "6526a557",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "# Run the interactive session\n",
-    "if __name__ == \"__main__\":\n",
-    "    run_research_interactive()"
+    "run_research_interactive()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab792c50",
+   "metadata": {},
+   "source": [
+    "## Exercise 5: Benchmark Evaluation (GAIA)\n",
+    "\n",
+    "We will now evaluate our agent against the GAIA benchmark (Validation Level 1).\n",
+    "We compare the Deep Research Agent against a standard ReAct baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c091c506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "import pandas as pd\n",
+    "from langchain.agents import create_agent\n",
+    "from langchain_community.tools import DuckDuckGoSearchRun\n",
+    "\n",
+    "# 1. Setup ReAct Baseline\n",
+    "agent_react = create_agent(llm, [DuckDuckGoSearchRun()])\n",
+    "\n",
+    "# 2. Load Dataset\n",
+    "# Ensure create_gaia_dataset() has been run or the file exists.\n",
+    "csv_path = \"gaia_validation_level1.csv\"\n",
+    "try:\n",
+    "    filtered_df = pd.read_csv(csv_path)[:5]\n",
+    "    print(f\"Loaded {len(filtered_df)} tasks for evaluation.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\n",
+    "        f\"Dataset not found at {csv_path}. Please run 'python src/create_gaia.py' inside labs/ directory.\"\n",
+    "    )\n",
+    "    filtered_df = pd.DataFrame()\n",
+    "\n",
+    "\n",
+    "# 3. Define Judge\n",
+    "def query_judge_model(question, predicted, truth, metadata):\n",
+    "    prompt = f\"\"\"\n",
+    "    You are an impartial judge.\n",
+    "\n",
+    "    [CONTEXT/METADATA]: {metadata}\n",
+    "    [QUESTION]: {question}\n",
+    "    [GROUND TRUTH]: {truth}\n",
+    "    [PREDICTED]: {predicted}\n",
+    "\n",
+    "    Compare Predicted to Ground Truth. Assign a score 1-10.\n",
+    "    1 = Wrong, 10 = Perfect.\n",
+    "    Also provide a short explanation.\n",
+    "\n",
+    "    Output format:\n",
+    "    SCORE: [Score]\n",
+    "    REASON: [Short explanation]\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return llm.invoke(prompt).content\n",
+    "    except Exception as e:\n",
+    "        return f\"SCORE: 0 REASON: Error calling judge: {e}\"\n",
+    "\n",
+    "\n",
+    "def extract_score(judge_response):\n",
+    "    match = re.search(r\"SCORE:\\s*(\\d+)\", judge_response)\n",
+    "    return int(match.group(1)) if match else 0\n",
+    "\n",
+    "\n",
+    "# 4. Evaluation Loop\n",
+    "results = []\n",
+    "if not filtered_df.empty:\n",
+    "    for index, row in filtered_df.iterrows():\n",
+    "        task_id = row[\"task_id\"]\n",
+    "        question = row[\"Question\"]\n",
+    "        truth = row[\"Final answer\"]\n",
+    "        metadata = str(row[\"Annotator Metadata\"])\n",
+    "\n",
+    "        print(f\"\\nProcessing Task: {task_id}\")\n",
+    "\n",
+    "        # --- Agent 1: Deep Research (Our App) ---\n",
+    "        try:\n",
+    "            # We use the autonomous 'app' from Exercise 3\n",
+    "            result_dr = app.invoke({\"topic\": question})\n",
+    "            predicted_dr = result_dr.get(\"final_report\", \"No report generated.\")\n",
+    "        except Exception as e:\n",
+    "            predicted_dr = f\"Error during research: {str(e)}\"\n",
+    "        print(f\"[Deep Research Output]: {predicted_dr[:100]}...\")\n",
+    "\n",
+    "        judge_resp_dr = query_judge_model(question, predicted_dr, truth, metadata)\n",
+    "        score_dr = extract_score(judge_resp_dr)\n",
+    "        print(f\"Deep Research Score: {score_dr}\")\n",
+    "\n",
+    "        # --- Agent 2: ReAct Baseline ---\n",
+    "        print(\"[ReAct] Researching...\")\n",
+    "        try:\n",
+    "            result_react = react_executor.invoke({\"input\": question})\n",
+    "            predicted_react = result_react.get(\"output\", \"No output\")\n",
+    "        except Exception as e:\n",
+    "            predicted_react = f\"Error during ReAct: {str(e)}\"\n",
+    "        print(f\"[ReAct Output]: {predicted_react[:100]}...\")\n",
+    "\n",
+    "        judge_resp_react = query_judge_model(question, predicted_react, truth, metadata)\n",
+    "        score_react = extract_score(judge_resp_react)\n",
+    "        print(f\"ReAct Score: {score_react}\")\n",
+    "\n",
+    "        results.append(\n",
+    "            {\n",
+    "                \"task_id\": task_id,\n",
+    "                \"question\": question,\n",
+    "                \"ground_truth\": truth,\n",
+    "                \"deep_research_pred\": predicted_dr,\n",
+    "                \"deep_research_score\": score_dr,\n",
+    "                \"react_pred\": predicted_react,\n",
+    "                \"react_score\": score_react,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    # 5. Results\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    print(\"\\n=== Evaluation Results ===\")\n",
+    "    print(results_df)"
    ]
   }
  ],
